test/libsolidity/syntaxTests/inheritance/override/public_var_overrides_public_var.sol
contract A {
    uint public foo;
}
contract X is A {
	uint public override foo;
}
// ----
// DeclarationError: (55-79): Identifier already declared.
